fixed: table widget option hover background is not centered around radiobutton/checkbox, closes #549

--- a/src/widget/table/tablewidget.scss
+++ b/src/widget/table/tablewidget.scss
@@ -1,4 +1,5 @@
-.question.or-appearance-list-nolabel, .question.or-appearance-label {
+.question.or-appearance-list-nolabel,
+.question.or-appearance-label {
     margin: -0.9em 0 -0.7em 0;
 
     legend {
@@ -20,7 +21,7 @@
             @include flex(1);
 
             text-align: center;
-            padding-left: 0;
+            padding: 4px 0;
             word-break: break-word;
 
             .active {
@@ -35,18 +36,23 @@
 }
 
 .or[dir="rtl"] {
-    .question.or-appearance-list-nolabel, .question.or-appearance-label {
+
+    .question.or-appearance-list-nolabel,
+    .question.or-appearance-label {
         margin: -0.9em 0 -0.7em 0;
 
         legend {
             float: right;
         }
     }
+
     // fight the general main.scss rule
     .question.or-appearance-list-nolabel {
+
         input[type=radio],
         input[type=checkbox] {
-            float: none
+            float: none;
+            margin: 0;
         }
     }
 }
@@ -62,14 +68,16 @@
     // center the checkboxes, radiobuttons
     input[type=radio],
     input[type=checkbox] {
-        float: none; 
+        float: none;
         text-align: center;
         display: inline-block;
+        margin: 0;
+        vertical-align: middle;
     }
 }
 
 .question.or-appearance-label {
-    .option-wrapper > label {
+    .option-wrapper>label {
         margin-bottom: 6px;
 
         &:hover {
@@ -91,7 +99,7 @@
 
 .or[dir="rtl"] {
     .question.or-appearance-label {
-        .option-wrapper > label {
+        .option-wrapper>label {
             img {
                 float: none;
             }
